@@ -896,7 +896,20 @@ class PokerRendererTests(unittest.TestCase):
         self.assertEquals(m[0], 'ERROR *CRITICAL*: PACKET_POKER_PLAYER_ARRIVE: server url is http://somewhereelse, local url is http://here ')
         self.assertEquals(m[1], 'ERROR *CRITICAL*: PACKET_POKER_PLAYER_ARRIVE: server outfit is naked, local outfit is clothed ')
         self.assertEquals(m[2].find('sitActionsUpdate: <__main__.MockPlayer instance at') == 0, True)
+    # -----------------------------------------------------------------------------------------------------
+    def test14_packetSelfInPositionHandleConnection(self):
+        clear_all_messages()
+        proto = PokerRendererTests.MockPokerProtocol()
+        self.renderer.setProtocol(proto)
+        self.assertEquals(get_messages(), [])
 
+        # We expect a PacketPokerSelfInPosition to call resetLagmax
+        clear_all_messages()
+        p = PacketPokerSelfInPosition()
+        self.renderer.factory.display = PokerRendererTests.MockDisplay(p)
+        self.renderer._handleConnection(proto, p)
+        self.assertEquals(self.renderer.factory.display.calledCount, 1)
+        self.assertEquals(get_messages(), ['resetLagmax: 120'])
 # -----------------------------------------------------------------------------------------------------
 def GetTestSuite():
     suite = unittest.TestSuite()
